css/styles.css
/* ... */
.portfolio-nav ul li span {
    padding: 15px 0;
    border-bottom: 2px solid transparent;
}

.portfolio-nav ul li.current span {
    border-bottom: 2px solid #0bceaf;
}

.mh-project-gallery .grid-item figure {
    position: relative;
    overflow: hidden;
    border-radius: 10px;
}

.mh-project-gallery .grid-item figure img {
    position: relative;
    width: 100%;
    display: block;
}

.mh-project-gallery .grid-item figure figcaption {
    position: absolute;
    padding: 15px;
    height: 100%;
    width: 100%;
    top: auto;
    left: 0;
    color: #fff;
    bottom: 0;
    z-index: 10;
    -moz-transition: 0.5s;
    -o-transition: 0.5s;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.mh-project-gallery .grid-item figure figcaption:after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    -webkit-transition: all 0.4s ease-out;
    -moz-transition: all 0.4s ease-out;
    -o-transition: all 0.4s ease-out;
    -ms-transition: all 0.4s ease-out;
    transition: all 0.4s ease-out;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(0.95);
    -o-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(0.95);
    -ms-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(0.95);
    -moz-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(0.95);
    -webkit-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(0.95);
    z-index: -1;
    opacity: 0;
}

.mh-project-gallery .grid-item figure figcaption .fa {
    margin: 0;
    padding: 0;
    font-size: 24px;
    font-weight: 400;
    line-height: 35px;
    position: absolute;
    text-align: center;
    width: 100%;
    left: 0;
    top: 45%;
    margin-top: -22px;
    transform: translateX(0px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -o-transform: translateX(0px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -ms-transform: translateX(0px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -moz-transform: translateX(0px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transform: translateX(0px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    opacity: 0;
    letter-spacing: 0px;
}

.mh-project-gallery .grid-item figure figcaption .title {
    margin: 0;
    padding: 0;
    position: absolute;
    text-align: center;
    width: 100%;
    left: 0;
    right: 0;
    font-size: 11px;
    line-height: 30px;
    text-transform: capitalize;
    top: 50%;
    margin-top: 30px;
    margin-top: -2px;
    transform: translateX(80px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -o-transform: translateX(80px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -ms-transform: translateX(80px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -moz-transform: translateX(80px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transform: translateX(80px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transition: all 0.4s ease-out;
    -moz-transition: all 0.4s ease-out;
    -o-transition: all 0.4s ease-out;
    -ms-transition: all 0.4s ease-out;
    transition: all 0.4s ease-out;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    opacity: 0;
    letter-spacing: 0px;
}

.mh-project-gallery .grid-item figure figcaption .sub-title {
    margin: 0;
    padding: 0;
    position: absolute;
    text-align: center;
    width: 100%;
    left: 0;
    font-size: 9px;
    top: 50%;
    margin-top: 30px;
    transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -o-transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -ms-transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -moz-transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -moz-transition: 0.5s;
    -o-transition: 0.5s;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    opacity: 0;
    letter-spacing: 0px;
}

.mh-project-gallery .grid-item figure figcaption a {
    position: absolute;
    z-index: 1111;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    text-indent: -99999px;
}

.mh-project-gallery .grid-item figure:hover {
    -webkit-transition: all 0.4s ease-out;
    -moz-transition: all 0.4s ease-out;
    -o-transition: all 0.4s ease-out;
    -ms-transition: all 0.4s ease-out;
    transition: all 0.4s ease-out;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.mh-project-gallery .grid-item figure:hover figcaption {
    color: #fff;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background: rgba(11, 206, 175, 0.9);
}

.mh-project-gallery .grid-item figure:hover figcaption:after {
    opacity: 1;
    transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -o-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -ms-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -moz-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transform: translateX(0) translateY(0) translateZ(0) rotate(0deg) scale(1);
    -webkit-transition: all 0.4s ease-out;
    -moz-transition: all 0.4s ease-out;
    -o-transition: all 0.4s ease-out;
    -ms-transition: all 0.4s ease-out;
    transition: all 0.4s ease-out;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
/* ... */

